--- a/designs.html
+++ b/designs.html
@@ -142,7 +142,7 @@
   <li class="dot"></li>
   <li>Coreldraw</li>
   </ul>
-  <h6>UI Designs</h6>
+  <h6>Instagram Carousel Designs</h6>
   <a class="link-btn" href="design-001.html" tabindex="0">View Case Study
   <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
   <path d="M3.75 12H20.25" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
