--- a/ui-001.html
+++ b/ui-001.html
@@ -188,7 +188,7 @@ About Project
 <a data-fancybox href="image/innerpage/ui-gallery-003.jpg"><img src="image/innerpage/ui-gallery-003.jpg" class="w-100" alt="kevin-gallery"></a>
 </div>
 <div class="col-xs-6">
-<a data-fancybox href="image/innerpage/ui-gallery-004.jpg"><img src="image/innerpage/ui-gallery-004.jpg" class="w-100" alt="kevin-gallery"></a>
+<a data-fancybox href="image/innerpage/ui-gallery-004.png"><img src="image/innerpage/ui-gallery-004.png" class="w-100" alt="kevin-gallery"></a>
 </div>
 <div class="col-xs-6">
   <a data-fancybox href="image/innerpage/ui-gallery-005.jpg"><img src="image/innerpage/ui-gallery-005.jpg" class="w-100" alt="kevin-gallery"></a>
