--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 <div class="flc-hero-section">
 <div class="container">
 <div class="flc-hero-content">
-<h1>Hey, It’s Stephen I. Ayo. UI/UX & Graphic Designer Based in Canada.</h1>
+<h1>Hey, It’s Stephen I. Ayo. UI/UX & Graphic Designer Based in Nigeria.</h1>
 <a href="#about">
 <div class="flc-scroll-down">
 Scroll down
@@ -840,7 +840,7 @@ let’s work together
 </div>
 <div class="flc-footer-info-data">
 <p>LOCATION</p>
-<a href="#">Jarvis, Canada </a>
+<a href="#">Lagos, Nigeria </a>
 </div>
 </div>
 </div>
@@ -851,7 +851,7 @@ let’s work together
 </div>
 <div class="flc-footer-info-data">
 <p>PHONE NUMBER</p>
-<a href="#">+1 3080*****</a>
+<a href="#">+234 3080*****</a>
 </div>
 </div>
 </div>
