--- a/web-dev-detail.html
+++ b/web-dev-detail.html
@@ -503,9 +503,9 @@ Web Development
   <img src="image/l-1/me.png" alt="logo">
   <span class="text">Stephen I. Ayo</span>
   </a>
-  <p>Ontario Jarvis, ON 6428 Canada <br>
-    Jarvis, ON N0A 1J0
-    Canada</p>
+  <p>Lakeview Apartments <br>
+   Jabi Lake, Abuja,
+    Nigeria</p>
   </div>
   </div>
   <div class="col-md-6">
