--- a/design-002.html
+++ b/design-002.html
@@ -329,9 +329,9 @@ From words to technology, even the world it's self is being facilitated to meet 
   <img src="image/l-1/me.png" alt="logo">
   <span class="text">Stephen I. Ayo</span>
   </a>
-  <p>Ontario Jarvis, ON 6428 Canada <br>
-    Jarvis, ON N0A 1J0
-    Canada</p>
+  <p>Lakeview Apartments <br>
+   Jabi Lake, Abuja,
+   Nigeria</p>
   </div>
   </div>
   <div class="col-md-6">
