--- a/contact.html
+++ b/contact.html
@@ -142,7 +142,7 @@ need my help? Feel free to contact me. I will reply within 48 hours.</p>
 </div>
 <div class="text">
 <span>Call me now</span>
-<h6>+1 3080*****</h6>
+<h6>+234 809*****</h6>
 </div>
 </a>
 <a href="#">
@@ -248,9 +248,9 @@ need my help? Feel free to contact me. I will reply within 48 hours.</p>
   <img src="image/l-1/me.png" alt="logo">
   <span class="text">Stephen I. Ayo</span>
   </a>
-  <p>Ontario Jarvis, ON 6428 Canada <br>
-    Jarvis, ON N0A 1J0
-    Canada</p>
+  <p>Lakeview Apartments <br>
+   Jabi Lake, Abuja,
+   Nigeria</p>
   </div>
   </div>
   <div class="col-md-6">
