--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@ let’s work together
 </div>
 <div class="flc-footer-info-data">
 <p>LOCATION</p>
-<a href="#">Lagos, Nigeria </a>
+<a href="#">Abuja, Nigeria </a>
 </div>
 </div>
 </div>
